<resources>
    <string name="app_name" translatable="false">Trabalho Final Android</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="incorrectLogin">Incorrect Login</string>
    <string name="developer_name" translatable="false">Júlio Oliveira da Silva</string>
    <string name="version">Version 1.0</string>
    <string name="canceled">Canceled</string>
    <string name="insert_success">Data added with success</string>
    <string name="insert_error">Error adding data</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="manter_conectado">Keep connected</string>
    <string name="logar">Login</string>
    <string name="name">Name</string>
    <string name="born">Nascimento</string>
    <string name="nacionality">Nacionality</string>
    <string name="instruments">Instruments</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="detail">Detail</string>
    <string name="new_musician">New Musician</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="artistic_name">Artistic Name</string>
    <string name="about">About</string>
    <string name="action">Actions</string>
</resources>
